--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -96,3 +96,13 @@
   background-color: #fff !important
 .banner-interno__titulo h2
   color: #fff !important
+
+.titulo 
+  color: #12263F
+  font-family: "Roboto", sans-serif
+  font-size: 20px
+  font-weight: 800
+
+.titulo-segundo:after 
+  border-left-color: #e2872c
+  background-color: #e8e8e8
