--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -106,3 +106,13 @@
 .titulo-segundo:after 
   border-left-color: #e2872c
   background-color: #e8e8e8
+
+.lista-ul__vineta
+  display: none
+
+.banner-interno__titulo__icono i 
+  color: #12263f
+  position: absolute
+
+.tarjeta.credito
+  background-color: #d2e1f1 !important
